--- a/cvweb/style.css
+++ b/cvweb/style.css
@@ -3,12 +3,12 @@
 body{
       padding: 100px 0;
 background-color: #303030;  
+
 }
 .continer
 {
       padding: 10px 10px;
       width: 800px;
-   
       border: 10px solid #202020 ;
       margin: 0 auto;
       background-color: seashell;
@@ -19,7 +19,7 @@ background-color: #303030;
 
 .content{
       padding: 10px 30px;
-       width:  80%; 
+      width:  400px; 
       min-height: 1px;
       border: 5px solid #3f3f3f ;
       justify-content: center;
@@ -40,6 +40,9 @@ background-color: #303030;
       
 }
 
+li {
+      line-height: 1.3;
+  }
 
 div{
       margin: 7%;
@@ -49,3 +52,5 @@ div{
       text-decoration: none; /* Отменяем подчеркивание у ссылки */
       color: black;
      } 
+
+ 
