--- a/cvweb/style.css
+++ b/cvweb/style.css
@@ -1,55 +1,81 @@
-
 body{
       padding: 100px 0;
 background-color: #303030;  
 
+
 }
+
 .continer
 {
       padding: 10px 10px;
-      width: 800px;
+      max-width:  800px;
       border: 10px solid #202020 ;
       margin: 0 auto;
       background-color: seashell;
       border-radius: 25px;
-      
+}
+a { 
+      text-decoration: none; /* Отменяем подчеркивание у ссылки */
+      color: rgb(0, 0, 0);
+     } 
+
+  
+
+
+
+    
+.perent
+ { 
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap; 
+      margin: 0.4%;
+      justify-content: center;
 }
 
-.content{
-      padding: 10px 30px;
-      width:  400px; 
-      min-height: 1px;
-      border: 5px solid #3f3f3f ;
-      justify-content: center;
-      align-items: center;
-      border-radius: 25px;
-      background-color: rgb(245, 235, 228);
-   
-}
-.content_left{
-      padding: 10px 30px;
-      width:  200px; 
-      min-height: 1px;
-      border: 5px solid #3f3f3f ;
-      justify-content: center;
-      align-items: center;
-      border-radius: 25px;
-      background-color: rgb(245, 235, 228);
-      
-}
 
 .language{
       text-align: right;
-}
-div{
-      margin: 7%;
+      margin:20px 50px;
   }
+ div{
+      margin: 1%;
+ }
 
-  a { 
-      text-decoration: none; /* Отменяем подчеркивание у ссылки */
-      color: black;
-     } 
 
-     li {
+
+.child_left{
+      min-width:  180px;
+      width: 25%; 
+      padding: 10px 30px;
+      min-height: 1px;
+      border: 5px solid #3f3f3f ;
+      border-radius: 25px;
+      background-color: rgb(245, 235, 228);
+}
+.child_left_img{
+
+      
+      width: 230px;  
+      padding: 0px 10px;
+      border-radius: 25px;
+      
+}
+
+
+.child_right{
+      min-width:  250px;
+      width: 50%; 
+      padding: 10px 30px;
+      min-height: 1px;
+      border: 5px solid #3f3f3f ;
+      border-radius: 25px;
+      background-color: rgb(245, 235, 228);
+}
+
+
+li {
       line-height: 1.4;
   }
+  
+ 
