--- a/cvweb/style.css
+++ b/cvweb/style.css
@@ -1,17 +1,17 @@
 body{
-      padding: 100px 0;
-background-color: #303030;  
+      padding: 10px 0;
+      background-color: #303030;  
 
 
 }
 
 .continer
 {
-      padding: 10px 10px;
+   
       max-width:  800px;
       border: 10px solid #202020 ;
-      margin: 0 auto;
       background-color: seashell;
+      margin: 0 auto;
       border-radius: 25px;
 }
 a { 
@@ -19,7 +19,16 @@ a {
       color: rgb(0, 0, 0);
      } 
 
-  
+.language{
+      text-align: right;
+      margin:20px 50px;
+  }
+ div{
+      margin: 1%;
+ }
+ li {
+      line-height: 1.4;
+  }
 
 
 
@@ -29,25 +38,16 @@ a {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap; 
-      margin: 0.4%;
+    
       justify-content: center;
 }
-
-
-.language{
-      text-align: right;
-      margin:20px 50px;
-  }
- div{
-      margin: 1%;
- }
 
 
 
 .child_left{
       min-width:  180px;
       width: 25%; 
-      padding: 10px 30px;
+      padding: 3%  3%;
       min-height: 1px;
       border: 5px solid #3f3f3f ;
       border-radius: 25px;
@@ -57,16 +57,16 @@ a {
 
       
       width: 230px;  
-      padding: 0px 10px;
+      padding: 0px 11px;
       border-radius: 25px;
       
 }
 
 
 .child_right{
-      min-width:  250px;
+      min-width: 230px;
       width: 50%; 
-      padding: 10px 30px;
+      padding: 3%  3%;
       min-height: 1px;
       border: 5px solid #3f3f3f ;
       border-radius: 25px;
@@ -74,8 +74,3 @@ a {
 }
 
 
-li {
-      line-height: 1.4;
-  }
-  
- 
