--- a/style.css
+++ b/style.css
@@ -1,83 +1,114 @@
-body{
+body {
       padding: 10px 0;
-      background-color: #303030;  
+      background-color: #303030;
 
 
 }
 
-.continer
-{
-   
-      max-width:  800px;
-      border: 10px solid #202020 ;
+.continer {
+
+      max-width: 800px;
+      border: 10px solid #202020;
       background-color: seashell;
       margin: 0 auto;
       border-radius: 25px;
 }
-a { 
-      text-decoration: none; /* Отменяем подчеркивание у ссылки */
-      color: rgb(0, 0, 0);
-     
-     } 
 
-.language{
+a {
+      text-decoration: none;
+      color: rgb(0, 0, 0);
+
+}
+
+.language {
       text-align: right;
-      margin:20px 50px;
-  }
- div{
+      margin: 20px 50px;
+}
+
+div {
       margin: 1%;
- }
- li {
+}
+
+li {
       line-height: 1.4;
-  }
-  ul, li {
+}
+
+ul,
+li {
       padding-left: 5px;
       margin: 5px;
-      
-    }
+
+}
 
 
 
-    
-.perent
- { 
+
+.perent {
       display: flex;
       flex-direction: row;
-      flex-wrap: wrap; 
-    
+      flex-wrap: wrap;
+
       justify-content: center;
 }
 
 
 
-.child_left{
-      min-width:  180px;
-      width: 25%; 
-      padding: 3%  3%;
+.child_left {
+      min-width: 180px;
+      width: 25%;
+      padding: 3% 3%;
       min-height: 1px;
-      border: 5px solid #3f3f3f ;
+      border: 5px solid #3f3f3f;
       border-radius: 25px;
       background-color: rgb(245, 235, 228);
-  
-  
-}
-.child_left_img{
 
-      
-      width: 230px;  
-      padding: 0px 11px;
+
+}
+
+.child_left:first-child {
+      border: none;
+      padding: 1% 3%;
+      background-color: seashell;
+}
+
+.child_left img {
+
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
       border-radius: 25px;
-      
+
+
 }
 
 
-.child_right{
+.child_right {
       min-width: 230px;
-      width: 50%; 
-      padding: 3%  3%;
+      width: 50%;
+      padding: 3% 3%;
       min-height: 1px;
-      border: 5px solid #3f3f3f ;
+      border: 5px solid #3f3f3f;
       border-radius: 25px;
       background-color: rgb(245, 235, 228);
-      
+
+}
+
+@media (max-width: 633px) {
+      .perent {
+            flex-direction: column;
+      }
+
+      .child_left,
+      .child_right {
+            width: 90%;
+            margin-bottom: 10px;
+            padding: 3%;
+
+
+      }
+
+      .child_left img {
+            max-width: 230px;
+      }
 }
