--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 }
 
-.continer {
+.container {
 
       max-width: 800px;
       border: 10px solid #202020;
@@ -43,7 +43,7 @@ li {
 
 
 
-.perent {
+.parent {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -54,6 +54,20 @@ li {
 
 
 .child_left {
+      min-width: 180px;
+      width: 25%;
+      padding: 3% 3%;
+      min-height: 1px;
+      border: 5px solid #3f3f3f;
+      border-radius: 25px;
+      background-color: rgb(245, 235, 228);
+
+
+}
+
+
+
+.child_ {
       min-width: 180px;
       width: 25%;
       padding: 3% 3%;
