--- a/style.css
+++ b/style.css
@@ -96,6 +96,17 @@ li {
 
 }
 
+.child_mid {
+      min-width: 650px;
+      width: 50%;
+      padding: 3% 3%;
+      min-height: 1px;
+      border: 5px solid #3f3f3f;
+      border-radius: 25px;
+      background-color: rgb(245, 235, 228);
+
+}
+
 
 .child_right {
       min-width: 230px;
